# zmk-auto-layer

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md
.github/: dependabot.yml
behaviors/: behavior_auto_layer.c
dts/behaviors/: num_word.dtsi  ruen.dtsi
dts/bindings/behaviors/: zmk,behavior-auto-layer.yaml  zmk,behavior-ruen-key.yaml  zmk,behavior-ruen-macos.yaml  zmk,behavior-ruen-one-key.yaml  zmk,behavior-ruen-switch.yaml  zmk,behavior-ruen-test.yaml  zmk,behavior-ruen.yaml
include/zmk/: lang.h
src/: lang.c
src/behaviors/: behavior_auto_layer.c  behavior_ruen.c  behavior_ruen_key.c  behavior_ruen_macos.c  behavior_ruen_one_key.c  behavior_ruen_switch.c  behavior_ruen_test.c
tests/: behavior_keymap.dtsi
tests/basic/: events.patterns  keycode_events.snapshot  native_sim.keymap
tests/from-mo/: events.patterns  keycode_events.snapshot  native_sim.keymap
zephyr/: module.yml
